--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,12 @@ include_directories(${CMAKE_SOURCE_DIR}/3rdParty/RakNet/source)
 link_directories(${CMAKE_SOURCE_DIR}/3rdParty/SFML/lib)
 link_directories(${CMAKE_SOURCE_DIR}/3rdParty/RakNet/lib)
 
-add_executable(Client src/client/main.cpp src/common/GameStructs.h src/client/Client.h)
-add_executable(Server src/server/main.cpp src/common/GameStructs.h src/server/Server.h)
+add_executable(Client src/client/main.cpp src/common/GameStructs.h src/client/Client.h src/client/Client.cpp)
+add_executable(Server src/server/main.cpp src/common/GameStructs.h src/server/Server.h src/server/Server.cpp)
+
+add_custom_command(TARGET Client PRE_BUILD
+ COMMAND ${CMAKE_COMMAND} -E copy_directory
+ ${CMAKE_SOURCE_DIR}/3rdParty/bin $<TARGET_FILE_DIR:Client>)
 
 set(DEP_LIBS
 	sfml-system
