Moved the game class into the common folder, fixed a few warnings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,16 +17,17 @@ src/common/Object.h src/common/Object.cpp
 src/common/Asteroid.h src/common/Asteroid.cpp
 src/common/Bullet.h src/common/Bullet.cpp
 src/common/Ship.h src/common/Ship.cpp
+src/common/Game.h src/common/Game.cpp
 )
 
 add_executable(Server src/server/main.cpp 
 src/common/NetworkStructs.h src/common/PhysicsStructs.h src/common/PhysicsStructs.cpp
 src/server/Server.h src/server/Server.cpp
-src/Server/Game.h src/server/Game.cpp
 src/common/Object.h src/common/Object.cpp
 src/common/Asteroid.h src/common/Asteroid.cpp
 src/common/Bullet.h src/common/Bullet.cpp
 src/common/Ship.h src/common/Ship.cpp
+src/common/Game.h src/common/Game.cpp
 )
 
 add_custom_command(TARGET Client PRE_BUILD
