Added the timer class to the vcxprojects and CMakeLists. Now we're only sending ship data rather than the entire game data. Working on the time dilation except aka trying to figure it out

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ src/common/Asteroid.h src/common/Asteroid.cpp
 src/common/Bullet.h src/common/Bullet.cpp
 src/common/Ship.h src/common/Ship.cpp
 src/common/Game.h src/common/Game.cpp
+src/common/Timer.h src/common/Timer.cpp
 )
 
 add_executable(Server src/server/main.cpp 
@@ -28,6 +29,7 @@ src/common/Asteroid.h src/common/Asteroid.cpp
 src/common/Bullet.h src/common/Bullet.cpp
 src/common/Ship.h src/common/Ship.cpp
 src/common/Game.h src/common/Game.cpp
+src/common/Timer.h src/common/Timer.cpp
 )
 
 add_custom_command(TARGET Client PRE_BUILD
