Added ObjectInfo class (aka the interpolator) to the project.  Tried to set it up so that it interpolates all of the other ship's data (position, velocity, angle).  Works a little better than no interpolation but it's still jumpy/jittery which probably has something to do with setting the other ship's position?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ src/common/Bullet.h src/common/Bullet.cpp
 src/common/Ship.h src/common/Ship.cpp
 src/common/Game.h src/common/Game.cpp
 src/common/Timer.h src/common/Timer.cpp
+src/client/ObjectInfo.h src/client/ObjectInfo.cpp
 )
 
 add_executable(Server src/server/main.cpp 
